--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root"></div>
+    <div id="root" class="screen-max-width"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
