--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -19,6 +19,12 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
@@ -29,7 +35,7 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root" class="screen-max-width"></div>
+    <div id="root"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
